# brwm

./: Cargo.toml  README.md  build_and_run.sh  run.sh  xinitrc  xinitrc-release
src/: atom_manager.rs  cursor.rs  cursor_manager.rs  display.rs  error.rs  main.rs  screen.rs  window_manager.rs
