[package]
name = "brwm"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]

[dependencies]
lazy_static = "0.1"
libc = "0.2"
log = "0.3"
fern = "0.3"
time = "0.1"

[dependencies.xcb]
git = "https://github.com/jeandudey/rust-xcb"

[dependencies.xcb-cursor]
git = "https://github.com/jeandudey/xcb-cursor-rs"

[dependencies.xcb-image]
git = "https://github.com/jeandudey/xcb-image-rs"
